feat(profile): integrate storage service for photo URLs
Introduce `StorageService` to handle photo URL generation in `UserProfileControllerImpl`. Update mappers and DTOs to reflect changes:
- Replace `photoUrl` with `photoPath` for consistency with file storage.
- Add `temporalPhotoUrl` to response resource for generated URLs.
- Use `StorageService` to provide fresh photo URLs during profile retrievals.

Include error handling for photo URL generation failures.